Correções de ERROS

--- a/src/Assets/CSS/modalGenero.css
+++ b/src/Assets/CSS/modalGenero.css
@@ -126,3 +126,15 @@
     display: none;
 }
 
+
+.vermelho{
+    color: red;
+    
+}
+
+
+.msgDeErro{
+    display: flex;
+    flex-direction: column;
+   
+}
