--- a/src/Assets/CSS/erro.css
+++ b/src/Assets/CSS/erro.css
@@ -1,5 +1,5 @@
 .centralizarPagina{
-    background-color: #0e3965;
+    background-color: rgb(252, 245, 245);
     width: 100%;
     height: 100%;
     display: flex;
@@ -30,7 +30,7 @@
 .textoPrimario{
     font-family: 'Roboto';
     font-size: 50px;
-    color: white;
+    color: #0e3965;
     font-weight: bolder;
     margin-top: 50px;
     margin-bottom: 0px;
@@ -40,6 +40,6 @@
 .textoSecundario{
     font-family: 'Roboto';
     font-size: 30px;
-    color: white;
+    color: #0e3965;
     text-decoration: none;
 }
