--- a/src/Assets/CSS/modalFilmes.css
+++ b/src/Assets/CSS/modalFilmes.css
@@ -49,7 +49,7 @@
 }
 
 .cardtxtFilme {
-    margin-bottom: 4.19vw;
+    margin-bottom: 3.40vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -94,10 +94,8 @@
 }
 
 .AlinhamentoInputModalFilme {
-
     display: flex;
     margin-top: 42px;
-
 }
 
 .inputFilmeModal {
@@ -111,7 +109,7 @@
     
     display: flex;
     justify-content: center;
-    margin-top: 4vw;
+    margin-top: 2vw;
 }
 
 .inputESelect{
@@ -160,3 +158,9 @@
 .hide {
     display: none;
 }
+
+ .msgDeErroFilmes p{
+    color: red;
+
+}
+
