--- a/src/Assets/CSS/modalGenero.css
+++ b/src/Assets/CSS/modalGenero.css
@@ -133,8 +133,10 @@
 }
 
 
-.msgDeErro{
+.msgDeErro p{
     display: flex;
     flex-direction: column;
-   
+    margin-top: 10px;
+    font-size: 20px;
+    line-height: 23px;
 }
